--- a/indexPage.html
+++ b/indexPage.html
@@ -8,9 +8,13 @@
 </head>
 <body>
     <h3>My Profile</h3>
-    <a href="home.html" target="my_frame">Home</a> &nbsp;&nbsp;
-    <a href="techtTag.html" target="my_frame">TechTag</a> &nbsp;&nbsp;
+    <a href="home.html" target="my_frame">Home</a>
+    <a href="education.html" target="my_frame">Education</a>
+    <a href="project.html" target="my_frame">Project</a>
+    <a href="techtTag.html" target="my_frame">TechTag</a> 
+    <a href="Hobbies.html" target="my_frame">Hobbies</a>
     <a href="info.html" target="my_frame"> Personal Details</a>
+    <a href="others.html" target="my_frame">Others</a>
     <hr>
     <iframe src="" name="my_frame" height="300px" width="500px">
 
