Update info page
Update info page

--- a/info.html
+++ b/info.html
@@ -7,7 +7,19 @@
     <title>Info</title>
 </head>
 <body>
-    this is Personal details page
-    
+    <h3><u>personal Details</u></h3>
+    <ul>
+        <li>First Name:Snehal</li>
+        <li>Middle Name:Sopan</li>
+        <li>Last Name:Avatade</li>
+        <li>Contact Details</li> 
+        <ul>
+            <li>Mobile Number:7796832280</li>
+            <li>Email-Id:snehalavatade555@gmail.com</li>
+        </ul>
+        <li>Education:BE(E&Tc)</li>
+        
+    </ul>
+
 </body>
 </html>
