Update new pages
Update new pages

--- a/Hobbies.html
+++ b/Hobbies.html
@@ -7,6 +7,21 @@
     <title>Hobbies</title>
 </head>
 <body>
-    this is Hobbies page
+    <h3>List of available courses</h3>
+    <ul>
+        <li>Data Structure and Algorithm</li>
+        <li>Web Technology</li>
+        <li>Aptitude and Reasoning</li>
+        <li>Programming language </li>
+    </ul>
+    <h3>Data Structure</h3>
+    <ol>
+        <li>Array</li>
+        <li>Linked List</li>
+        <li>Stacks</li>
+        <li>Queue</li>
+        <li>Trees</li>
+        <li>Graphs</li>
+    </ol>
 </body>
 </html>
