--- a/home.html
+++ b/home.html
@@ -10,8 +10,9 @@
 
 <body>
     <h3>Career objective</h3>
-    <h2>my home page</h2>
-    <ul>
+    <p>TO WORK IN ORGANIZATION WHERE I CAN LEARN AND GROW MY SKILLS AND ORGANIZATION GROWTHS</p>
+    <h3>Professional Summary</h3>
+    -<ul>
         <li>Having 1 year of experience in developing single page web application using angular 8, Html5, br
             css3,Bootstrap5,javascript,Typescript </li>
         <li>Experience on working with version control system-GIT and git hub</li>
