--- a/index.html
+++ b/index.html
@@ -16,7 +16,16 @@
         <i class="fa fa-envelope" aria-hidden="true">&nbsp; &nbsp;snehalavatade31@gmail.com</i>
         <br>
     </header>
-    <iframe src="" width="900px" height="600px">
+    <br>
+    <a href="home.html" target="my_frame">Home</a>
+    <a href="education.html" target="my_frame">Education</a>
+    <a href="project.html" target="my_frame">Project</a>
+    <a href="techtTag.html" target="my_frame">TechTag</a> 
+    <a href="Hobbies.html" target="my_frame">Hobbies</a>
+    <a href="info.html" target="my_frame"> Personal Details</a>
+    <a href="others.html" target="my_frame">Others</a>
+    <hr>
+    <iframe src="" name="my_frame" height="600px" width="1000px">
 
     </iframe>
     <br>
