--- a/others.html
+++ b/others.html
@@ -7,6 +7,65 @@
     <title>Others</title>
 </head>
 <body>
-    this is others page
+    <caption> <big>Student MarkSheet</big> </caption>
+        <tr>
+            <th> <u>Id</u> </th>
+            <th><u>Name</u></th>
+            <th><u>Subject</u></th>
+            <th><u>Marks</u></th>
+        </tr>
+        <tr>
+            <td rowspan="3">1</td>
+            <td rowspan="3">David</td>
+            <td>maths</td>
+            <td>80</td>
+        </tr>
+        <tr>
+            <td>physics</td>
+            <td>90</td>
+        </tr>
+        <tr>
+            <td>computers</td>
+            <td>70</td>
+        </tr>
+        <tr>
+            <td rowspan="3">2</td>
+            <td rowspan="3">Alex</td>
+            <td>maths</td>
+            <td>80</td>
+        </tr>
+        <tr>
+            <td>physics</td>
+            <td>70</td>
+        </tr>
+        <tr>
+            <td>computers</td>
+            <td>90</td>
+        </tr>
+    </table>
+    <table>
+        <caption><strong> Accessories Details</strong></big></caption>
+        <tr>
+            <th colspan="3">Product</th>
+        </tr>
+        <tr>
+            <th>NO.</th>
+            <th>P.Name</th>
+            <th>P.Count</th>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>pen</td>
+            <td rowspan="3">50</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>Book</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>Dust</td>
+        </tr>
+    </table>
 </body>
 </html>
