--- a/home.html
+++ b/home.html
@@ -5,17 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="indexed.css">
     <title>home</title>
 </head>
 
 <body>
-    <h3>Career objective</h3>
+    <h3 class="heading">Career objective</h3>
     <p>TO WORK IN ORGANIZATION WHERE I CAN LEARN AND GROW MY SKILLS AND ORGANIZATION GROWTHS</p>
-    <h3>Professional Summary</h3>
-    -<ul>
-        <li>Having 1 year of experience in developing single page web application using angular 8, Html5, br
+    <h3  class="heading">Professional Summary</h3>
+    <ul>
+        <li>Having 1 year of experience in developing single page web application using <span> angular 8</span> angular 8, Html5, br
             css3,Bootstrap5,javascript,Typescript </li>
-        <li>Experience on working with version control system-GIT and git hub</li>
+        <li id="line">Experience on working with version control system-GIT and git hub</li>
         <li>experience working with jira for user stories and bug tracking</li>
         <li>Strong Debugging troubleshooting code experience using chrome developer</li>
         <li>good working experience under agile methodology environment</li>
