--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Profile </title>
+    <link rel="stylesheet" href="indexed.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
     <header>
-        <i class="fa fa-user" aria-hidden="true">&nbsp; &nbsp;Snehal Avatade</i>&nbsp; &nbsp;
-        <i class="fa fa-mobile" aria-hidden="true">&nbsp; &nbsp;7796832280</i>&nbsp; &nbsp;
+        <i class="fa fa-user" aria-hidden="true">&nbsp; &nbsp;Snehal Avatade</i>
+        <i class="fa fa-mobile" aria-hidden="true">&nbsp; &nbsp;7796832280</i>
         <i class="fa fa-envelope" aria-hidden="true">&nbsp; &nbsp;snehalavatade31@gmail.com</i>
         <br>
     </header>
