Implement new changes
Implement new changes

--- a/Hobbies.html
+++ b/Hobbies.html
@@ -4,24 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="indexed.css">
     <title>Hobbies</title>
 </head>
 <body>
-    <h3>List of available courses</h3>
-    <ul>
-        <li>Data Structure and Algorithm</li>
-        <li>Web Technology</li>
-        <li>Aptitude and Reasoning</li>
-        <li>Programming language </li>
+    <h3>Hobbies</h3>
+    <ul class="list" style="list-style-type:circle;">
+        <li>reading books</li>
+        <li>photography</li>
+        <li>photo shoot</li>
+        <li>listening music</li>
     </ul>
     <h3>Data Structure</h3>
-    <ol>
+    <ul style="list-style-type:circle ;">
         <li>Array</li>
         <li>Linked List</li>
         <li>Stacks</li>
         <li>Queue</li>
         <li>Trees</li>
         <li>Graphs</li>
-    </ol>
+    </ul>
 </body>
 </html>
