--- a/education.html
+++ b/education.html
@@ -5,62 +5,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="indexed.css">
     <title>Education</title>
 </head>
 
 <body>
-    <p><b><i>my college name is sinhgad academy of engineering<i></b> <br>
-        the campus spread over 50 acer of land <br>
-        the location of college in pune and the total number of department is 4. <br>
-        the principal name is mr.dongre. <br>
-        the college approved by all india <br>
-        <em>my favorite teacher is </em><u>mr.patil sir</u> <br>
-        my favorite subject is programming langauge.i like programming. <br>
-        my hobbies are photography,drawing <br>
-        <b><u>tecnical events are smart mirror project,poster presentation</u></b> <br>
-        <mark>my achievment is national level technical presentation</mark>
-    </p>
-
-    <pre>Lorem ipsum dolor sit amet consectetur   adipisicing elit. Minima, 
-            cupiditate ipsum deserunt animi necessitatibus ullam reiciendis, 
-            quas aliquam quasi commodi explicabo nostrum vitae expedita ab eaque delectus mollitia perferendis. Porro?</pre>
-    <hr> 10 <sup>2</sup>
-    <p>Lorem, ipsum dolor sit &nbsp; &nbsp; amet consectetur adipisicing elit.
-        Iure pariatur rerum facilis delectus id, voluptas at provident,
-        veritatis velit amet voluptatibus repellat voluptatem impedit dolor nesciunt debitis aliquid illum nam.</p>
-    <p>
-    <h3>favorite fruits</h3>
-    <ul>
-        <li>mango</li>
-        <li>papaya</li>
-        <li>orange</li>
-        <li>watermelon</li>
-
-    </ul>
-    <h3>my best friends</h3>
-    <ol>
-        <li>harshwardhan patil</li>
-        <li>leela</li>
-        <li>meena jadhaw</li>
-        <li>ganesh patil</li>
-    </ol>
-    <h3>developers profile</h3>
-    <ol>
-        <li>UI developers</li>
-        <ul>
-            <li>Angular developer</li>
-            <li>React js developers</li>
-            <li>Flutter developer</li>
-        </ul>
-        <li>Backend developers</li>
-        <ol>
-            <li>java developer</li>
-            <li>.net developers</li>
-            <li>cpp developers</li>
-        </ol>
-        <li>script developers</li>
-    </ol>
-    </p>
+    <h3>Education details</h3>
+    <table>
+        <thead>
+            <th>Education</th>
+            <th>School/College</th>
+            <th>Percentage</th>
+            <th>Year of completion</th>
+        </thead>
+        <tr>
+            <td>Bachelors Degree</td>
+            <td>Sinhgad Academy Of engineering</td>
+            <td>58.96%</td>
+            <td>2020</td>
+        </tr>
+        <tr>
+            <td>Diploma</td>
+            <td>Vidya pratishthan Polytechnic college Indapur</td>
+            <td>69.76</td>
+            <td>2016</td>
+        </tr>
+        <tr>
+            <td>SSC</td>
+            <td>Shri Kateshwar Vidyalay kati</td>
+            <td>81.27</td>
+            <td>2011</td>
+        </tr>
+    </table>
 </body>
 
 </html>
