--- a/home.html
+++ b/home.html
@@ -13,8 +13,8 @@
     <h3 class="heading">Career objective</h3>
     <p>TO WORK IN ORGANIZATION WHERE I CAN LEARN AND GROW MY SKILLS AND ORGANIZATION GROWTHS</p>
     <h3  class="heading">Professional Summary</h3>
-    <ul>
-        <li>Having 1 year of experience in developing single page web application using <span> angular 8</span> angular 8, Html5, br
+    <ul class="list">
+        <li>Having 1 year of experience in developing single page web application using <span> angular 8</span> Html5, br
             css3,Bootstrap5,javascript,Typescript </li>
         <li id="line">Experience on working with version control system-GIT and git hub</li>
         <li>experience working with jira for user stories and bug tracking</li>
