--- a/index.html
+++ b/index.html
@@ -7,32 +7,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Profile </title>
     <link rel="stylesheet" href="indexed.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
     <header>
-        <i class="fa fa-user" aria-hidden="true">&nbsp; &nbsp;Snehal Avatade</i>
-        <i class="fa fa-mobile" aria-hidden="true">&nbsp; &nbsp;7796832280</i>
-        <i class="fa fa-envelope" aria-hidden="true">&nbsp; &nbsp;snehalavatade31@gmail.com</i>
+        <i class="fa fa-user" aria-hidden="true">&nbsp;Snehal Avatade</i>
+        <i class="fa fa-mobile" aria-hidden="true">&nbsp;7796832280</i>
+        <i class="fa fa-envelope" aria-hidden="true">&nbsp;snehalavatade31@gmail.com</i>
         <br>
     </header>
     <br>
-    <a href="home.html" target="my_frame">Home</a>
-    <a href="education.html" target="my_frame">Education</a>
-    <a href="project.html" target="my_frame">Project</a>
-    <a href="techtTag.html" target="my_frame">TechTag</a> 
-    <a href="Hobbies.html" target="my_frame">Hobbies</a>
-    <a href="info.html" target="my_frame"> Personal Details</a>
-    <a href="others.html" target="my_frame">Others</a>
+    <div class="demo">
+        <a href="home.html" target="my_frame">Home</a>
+        <a href="education.html" target="my_frame">Education</a>
+        <a href="project.html" target="my_frame">Project</a>
+        <a href="techtTag.html" target="my_frame">TechTag</a>
+        <a href="Hobbies.html" target="my_frame">Hobbies</a>
+        <a href="info.html" target="my_frame"> Personal Details</a>
+        <a href="others.html" target="my_frame">Others</a>
+    </div>
+
     <hr>
     <iframe src="" name="my_frame" height="600px" width="1000px">
 
     </iframe>
     <br>
-    <b>Follow me</b> 
-    <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i></a> &nbsp; &nbsp;
-    <a href="https://in.linkedin.com/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>&nbsp; &nbsp;
+    <br>
+    <b>Follow me</b>
+    <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
+    &nbsp; &nbsp;
+    <a href="https://in.linkedin.com/" target="_blank"><i class="fa fa-linkedin-square"
+            aria-hidden="true"></i></a>&nbsp; &nbsp;
     <a href="https://www.instagram.com/instagram/"><i class="fa fa-instagram" aria-hidden="true"></i>&nbsp; &nbsp;
     </a>
     <a href="https://www.google.com/"><i class="fa fa-google" aria-hidden="true"></i>&nbsp; &nbsp;</a>
