--- a/project.html
+++ b/project.html
@@ -10,10 +10,6 @@
 
 <body>
     <p>
-        Teams have everything they need to develop and operate software in Open DevOps, right out of the box.
-        Open DevOps starts with Jira Software, Confluence, Bitbucket, and Opsgenie.
-        Teams can easily add the tools they want, such as GitHub or GitLab, with a single click.
-
     <h2>Project details</h2>
     <hr>
     <p>
@@ -27,15 +23,14 @@
     student
     record like <br> student registration,student update information and to see all his or her activities like score
     card,attendance.
-    <br> <br>
     <hr>
-    <h3>Roles and responsibilities:</h3> <br>
-    &nbsp;&nbsp;&nbsp;designed and implemented and user interface with HTML5 and CSS<br>
-    &nbsp;&nbsp;&nbsp;work closely with backend for code integration <br>
-    &nbsp;&nbsp;&nbsp;identifying and troubles shooting issues with front end code <br>
-    &nbsp;&nbsp;&nbsp;worked on git as a version control <br>
-    &nbsp;&nbsp;&nbsp;Used jira for bug tracking <br>
-    &nbsp;&nbsp;&nbsp;implemented using agile SCRUM METHODOLOGY involved in daily stand up meeting,sprint showcase and
+    <h3>Roles and responsibilities:</h3>
+    designed and implemented and user interface with HTML5 and CSS<br>
+    work closely with backend for code integration <br>
+    identifying and troubles shooting issues with front end code <br>
+    worked on git as a version control <br>
+    Used jira for bug tracking <br>
+    implemented using agile SCRUM METHODOLOGY involved in daily stand up meeting,sprint showcase and
     involved fixed technical issues.
     <hr>
 
